[project]
name = "ue-mixamo-fix"
version = "0.1.0"
description = "small programm that fixes mixamo root animation for Unreal Engine 5.7 projects"
authors = [
    {name = "Schizogonia",email = "nika280805@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)",
    "tkinterdnd2 (>=0.4.3,<0.5.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
